@@ -113,7 +113,6 @@
 		  <property name="max_length">0</property>
 		  <property name="text" translatable="yes"></property>
 		  <property name="has_frame">True</property>
-		  <property name="invisible_char">●</property>
 		  <property name="activates_default">False</property>
 		</widget>
 		<packing>
