@@ -1,3 +1,7 @@
+2008-03-19  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet-device-wired.c: Implement asking DSL passwords.
+
 2008-03-19  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
